// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover renders content 1`] = `
.c3 {
  width: 12px;
  height: 12px;
  box-shadow: 1px 1px 0 0 #c3c3c3;
  background-color: #ffffff;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

.c2 {
  box-sizing: border-box;
  display: none;
  background-color: #ffffff;
  color: #0a0a0a;
  box-shadow: 0px 3px 5px 0px rgba(10,10,10,0.08);
  border: 1px solid #e1e1e1;
  border-radius: 0.4018775720164609rem;
  position: absolute;
  z-index: 99;
  width: auto;
  height: auto;
  bottom: 0;
  left: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
  margin: 0;
  padding: 1rem;
}

.c0:hover .c2 {
  display: block;
}

@media only screen and (min-width:48rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    padding: 1rem;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders trigger 1`] = `
.c3 {
  width: 12px;
  height: 12px;
  box-shadow: 1px 1px 0 0 #c3c3c3;
  background-color: #ffffff;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

.c2 {
  box-sizing: border-box;
  display: none;
  background-color: #ffffff;
  color: #0a0a0a;
  box-shadow: 0px 3px 5px 0px rgba(10,10,10,0.08);
  border: 1px solid #e1e1e1;
  border-radius: 0.4018775720164609rem;
  position: absolute;
  z-index: 99;
  width: auto;
  height: auto;
  bottom: 0;
  left: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
  margin: 0;
  padding: 1rem;
}

.c0:hover .c2 {
  display: block;
}

@media only screen and (min-width:48rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    padding: 1rem;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders with custom padding 1`] = `
.c3 {
  width: 12px;
  height: 12px;
  box-shadow: 1px 1px 0 0 #c3c3c3;
  background-color: #ffffff;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

.c0:hover .c4 {
  display: block;
}

.c0:hover .c5 {
  display: block;
}

.c0:hover .c6 {
  display: block;
}

.c2 {
  box-sizing: border-box;
  display: none;
  background-color: #ffffff;
  color: #0a0a0a;
  box-shadow: 0px 3px 5px 0px rgba(10,10,10,0.08);
  border: 1px solid #e1e1e1;
  border-radius: 0.4018775720164609rem;
  position: absolute;
  z-index: 99;
  width: auto;
  height: auto;
  bottom: 0;
  left: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
  margin: 0;
  padding: 10rem;
}

.c0:hover .c2 {
  display: block;
}

@media only screen and (min-width:48rem) {
  .c2 {
    padding: 10rem;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    padding: 10rem;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    padding: 10rem;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders with fixed height 1`] = `
.c3 {
  width: 12px;
  height: 12px;
  box-shadow: 1px 1px 0 0 #c3c3c3;
  background-color: #ffffff;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

.c0:hover .c4 {
  display: block;
}

.c0:hover .c5 {
  display: block;
}

.c2 {
  box-sizing: border-box;
  display: none;
  background-color: #ffffff;
  color: #0a0a0a;
  box-shadow: 0px 3px 5px 0px rgba(10,10,10,0.08);
  border: 1px solid #e1e1e1;
  border-radius: 0.4018775720164609rem;
  position: absolute;
  z-index: 99;
  width: auto;
  height: 100px;
  bottom: 0;
  left: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
  margin: 0;
  padding: 1rem;
}

.c0:hover .c2 {
  display: block;
}

@media only screen and (min-width:48rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    padding: 1rem;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders with fixed width 1`] = `
.c3 {
  width: 12px;
  height: 12px;
  box-shadow: 1px 1px 0 0 #c3c3c3;
  background-color: #ffffff;
  position: absolute;
  left: 18px;
  bottom: 0;
  -webkit-transform: translateY(50%) rotate(45deg);
  -ms-transform: translateY(50%) rotate(45deg);
  transform: translateY(50%) rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
}

.c0:hover .c4 {
  display: block;
}

.c2 {
  box-sizing: border-box;
  display: none;
  background-color: #ffffff;
  color: #0a0a0a;
  box-shadow: 0px 3px 5px 0px rgba(10,10,10,0.08);
  border: 1px solid #e1e1e1;
  border-radius: 0.4018775720164609rem;
  position: absolute;
  z-index: 99;
  width: 100px;
  height: auto;
  bottom: 0;
  left: 0;
  -webkit-transform: translateY(-56px);
  -ms-transform: translateY(-56px);
  transform: translateY(-56px);
  margin: 0;
  padding: 1rem;
}

.c0:hover .c2 {
  display: block;
}

@media only screen and (min-width:48rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    padding: 1rem;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    padding: 1rem;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <h1>
      Trigger
    </h1>
    <div
      className="c2"
    >
      <p>
        Content
      </p>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;
